<resources>
    <string name="app_name">Cashmate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_coins">Manage Coins</string>
    <string name="menu_notes">Manage Notes</string>
    <string name="menu_others">Manage Other Transactions</string>
    <string name="menu_report">Report</string>
    <string name="menu_saved">Saved Transactions</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>

    <string name="manage_items">Manage Currency</string>
    <string name="no_data">No Data</string>

    <string name="action_new_notes">New Notes</string>
    <string name="action_new_coins">New Coins</string>
    <string name="action_others">New Others</string>
    <string name="action_reset">Reset</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>

    <string name="title_denomination">Denomination</string>
    <string name="title_bundles">No of pcs in a Bundle</string>
    <string name="title_bags">No of pcs in a Bag</string>
    <string name="title_description">Description</string>
    <string name="title_cash_Report">Cash Report</string>
    <string name="title_cash_tally_Report">Cash Tally Report</string>
    <string name="title_as_on">As on : </string>
    <string name="title_cash_total">Cash Total : </string>
    <string name="title_total_pcs">Total Pcs. </string>
    <string name="title_save_note">Save Note</string>
    <string name="title_edit_note">Edit Note</string>
    <string name="title_save_coin">Save Coin</string>
    <string name="title_edit_coin">Edit Coin</string>
    <string name="title_save_other_transaction">Save Other Transaction</string>
    <string name="title_edit_other_transaction">Edit Other Transaction</string>

    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="alert">Alert</string>
    <string name="confirm">Confirm</string>
    <string name="save_record">Save Record</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="title_optional">TITLE (optional)</string>
    <string name="nothing_to_save">Nothing to Save!!</string>
    <string name="confirm_reset">Are you sure that you want to reset!!</string>
    <string name="transaction_saved">Transaction Saved, Check saved reports for all Saved Reports.</string>
    <string name="delete_confirmation">Are you sure you want to delete this item ?</string>

    <string name="Rs">\u20B9</string>
    <string name="rs">\u20A8</string>

    <string name="sample">Sample</string>
    <string name="coins">Coins</string>
    <string name="notes">Notes</string>
    <string name="others">Others</string>
    <string name="bags">Bags</string>
    <string name="bundles">Bundles</string>
    <string name="loose">Loose</string>
    <string name="total">Total</string>
    <string name="denom">Denom.</string>
    <string name="desc">Description.</string>
    <string name="eor">**********   End of Report   **********</string>


</resources>
