<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/title"
        android:text="@string/save_record"
        style="@style/TextView1"/>

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_description"
        style="@style/TextView5"
        android:layout_marginTop="20dp"
        android:hint="@string/title_optional" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/value_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            style="@style/EditText1" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/title_date_time"
        android:text="@string/date_time"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/value_dt_time"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:text="Android Programming is fun!!" />

    </RelativeLayout>

</LinearLayout>